--- a/src/main/resources/org/jenkinsci/plugins/zap/ZAPBuilder/config_fr.properties
+++ b/src/main/resources/org/jenkinsci/plugins/zap/ZAPBuilder/config_fr.properties
@@ -1,11 +1,2 @@
-StuffA=Bonjour
-StuffB=La
-StuffC=World
-StuffD=shapoo
-SourceDetails=This
-Title=is
-ScanDate=all
-ScanVersion=in
-ReportDate=French!
-ReportVersion=You
-Description=Know?
+TranslationTestA=Bonjour A
+TranslationTestB=Bonjour B
